# win11-tweaks

./: README.md
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: command.rs  lib.rs  main.rs  reg_edit_options.rs
src-tauri/src/win/: mod.rs
src-tauri/src/win/ps/: error.rs  mod.rs  proc.rs
src-tauri/src/win/reg/: data_type.rs  def.rs  error.rs  key_handler.rs  mod.rs  registry.rs  value.rs
