[package]
name = "win11-tweaks"
version = "0.1.0"
edition = "2021"

[lib]
name = "win11_tweaks_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = { version = "1.0.95", features = ["backtrace"] }

[dependencies.windows]
version = "0.58"
features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"]
